--- a/style.css
+++ b/style.css
@@ -51,8 +51,6 @@ table {
     height: 100px;
     background: transparent url('./image/bike.svg') center / cover no-repeat;
     position: absolute;
-    left: 125px;
-    bottom: 10px;
 }
 
 .gameArea {
@@ -70,4 +68,36 @@ table {
     height: 50px;
     background: #fff;
     left: 145px;
+}
+
+.start {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    margin: 0;
+    padding: 2rem 0;
+    text-align: center;
+    z-index: 200;
+    color: #fff;
+    font-size: 1.5rem;
+    background: black;
+    cursor: pointer;
+    font-family: sans-serif;
+    font-weight: 700;
+}
+
+.score {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: black;
+    padding: 2rem 0;
+    z-index: 200;
+    color: skyblue;
+    font-size: 1.5rem;
+    font-family: sans-serif;
+    font-weight: 500; 
+    text-align: center;
 }
